--- a/_posts/2019-06-29-the-us-narrative-today.html
+++ b/_posts/2019-06-29-the-us-narrative-today.html
@@ -2529,107 +2529,107 @@ stories:
   domain: http://www.advertiserplymouthoh.com/
   link: http://advertiserplymouthoh.com/index.php/2015/02/12/know-the-disadvantages-of-being-a-journalist/
 images:
-- name: stories-umberto-boccioni-dynamism-of-a-soccer-player-angel-statue-1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-umberto-boccioni-dynamism-of-a-soccer-player-angel-statue-1.jpg
-- name: ellis-island-ellisisland-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-bright-sand.jpg
-- name: statue-of-liberty-front-view-statueofliberty-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-pablo-blue.jpg
-- name: berlinwall2-berlinwall-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-yellow-collage.jpg
-- name: mosaic-face-mosaic-face-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-far-away.jpg
-- name: aws-s3-stories-flower-barbed-wire-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-flower-barbed-wire-nazi-poster.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-oily-mcoilface.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-oily-mcoilface.JPG
-- name: statue-of-liberty-front-view-statueofliberty-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-rainbow-festival.jpg
-- name: adam-smith-adam-smith-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-kand-two.jpg
-- name: rockingchair-rockingchair-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-diego-rivera1.jpg
-- name: liberty-back-statue-liberty-back-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-purple-pond.jpg
-- name: old-door-lock-old-door-lock-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-gred-mash.jpg
-- name: liberty-back-statue-liberty-back-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-really-hot.jpg
-- name: store-on-corner-store-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-clean-view.jpg
-- name: old-school-house-old-schoolhouse-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-dali-three.jpg
-- name: crow_blue_electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_blue_electricity.jpg
-- name: docks-docks-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-hot-spicy.jpg
-- name: power-lines-power-lines-empty-space-horiz-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-horiz-circuit.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-clean-view.jpg
-- name: windowmountain-window-mountain-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-wols.jpg
-- name: cargo-ship-cargo-ship-on-sea-blue-circuit-5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-blue-circuit-5.jpg
-- name: aws-s3-stories-36349140070-d5ec39cb34-z.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-36349140070-d5ec39cb34-z.jpg
-- name: oldhotel-oldhotel-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-kand-two.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-feed-people.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-feed-people.jpg
-- name: dc-statue-dcstatue-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-blue-electricity.jpg
-- name: oldcabin-store-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-yellow-collage.jpg
-- name: white-house-lawn-white-house-lawn-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-blue-circuit.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-attack-planes.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-attack-planes.png
-- name: razorwire-DSC-0080.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080.jpg
-- name: border-crossing-bordercrossing-umberto-bocc.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-umberto-bocc.png
-- name: los-angeles-from-observatory-losangeles-from-observatory-attack-planes.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-attack-planes.jpg
-- name: oldhouse-granaryfield-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-blue-brush.jpg
-- name: white-house-lawn-white-house-lawn-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-sand-paper.jpg
-- name: amusement-park-amusement-park-2-blue-circuit-3.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-blue-circuit-3.jpg
-- name: miamibeach-miamibeach-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-dry-skin.jpg
-- name: beach-rocks-beach-rocks-currents-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-kand-two.jpg
-- name: white-house-lawn-white-house-window.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window.jpg
-- name: nazi-invasion-DSC_0044-001.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-DSC_0044-001.jpg
-- name: death-valley-death-valley-national-park-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-blue-granite.jpg
-- name: old-door-lock-old-door-lock-2-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-mucha-mult.jpg
-- name: oldtrain-oldtrain-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-emily-carr.jpg
-- name: walled-garden-walled-garden-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-dali-two.jpg
-- name: ellis-island-ellis-island-room-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-creativity.jpg
-- name: crow_gred_mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_gred_mash.jpg
-- name: old-gas-pumps-oldgaspumps-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-kandinsky-bv.jpg
-- name: art-museum-art-museum-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-space-pizza.jpg
-- name: mistywoods-babyfoot-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-matrix.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-dry-skin.jpg
-- name: aws-s3-stories-new-52-175-800-500-0-max-0-1--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-52-175-800-500-0-max-0-1--1.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-crabapple.jpg
-- name: docks-docks-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-matrix.jpg
+- name: razorwire-DSC-0080-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-matrix.jpg
+- name: old-granary-field-granaryfield-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-gred-mash.jpg
+- name: old-gas-pumps-oldgaspumps-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-dark-dali.jpg
+- name: ellis-island-ellisisland-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-alberto-giacometti.jpg
+- name: docks-docks-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-ww2-dresden.jpg
+- name: razorcliff-razorcliff-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-wols.jpg
+- name: oldhotel-oldhotel-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-colorful-blocks.jpg
+- name: yosemite-yosemite-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-sand-paper.jpg
+- name: statue-face-open-mouth-statue-face-open-mouth-blue-circuit.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-face-open-mouth-statue-face-open-mouth-blue-circuit.png
+- name: gypsy-wagon-gypsywagon-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-satan-red.jpg
+- name: aws-s3-stories-cargo-ship-on-sea-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-cargo-ship-on-sea-blue-circuit.jpg
+- name: server-cloud-server-racks-clouds-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-clean-view.jpg
+- name: razorcliff-razorcliff-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-crabapple.jpg
+- name: oldhousecars-house-old-cars-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-crabapple.jpg
+- name: razorcliff-razorcliff-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-graham-sutherland.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-rainbow-festival.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-rainbow-festival.png
+- name: downtown-fredericksburg-downtown-fredericksburg-free-woman.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-free-woman.JPG
+- name: eduardo-eduardo-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-emily-carr.jpg
+- name: ellis-island-ellisisland-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-green-zuma.jpg
+- name: razorwire-DSC-0080-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-dali-three.jpg
+- name: crow-crow-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-marcel-duchamp.jpg
+- name: berlinwall-DSC-0084-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-neo-instinct.jpg
+- name: stories-downtown-fredericksburg-china-prop.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-downtown-fredericksburg-china-prop.JPG
+- name: copper-circuit-DSC_0001.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-DSC_0001.jpg
+- name: abe-lincoln-one-ww2-dresden-file-00-00-15-87.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-ww2-dresden-file-00-00-15-87.jpg
+- name: curtain-curtain-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-monet-one.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-rainbow-festival.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-rainbow-festival.JPG
+- name: yosemite-yosemite-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-nazi-poster.jpg
+- name: containership-containership-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-mucha-mult.jpg
+- name: ellis-island-ellisisland-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-ww2-color.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-gan-vogh.jpg
+- name: hollywood-building-hollywood-building-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-creativity.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-internet-numbers.jpg
+- name: border-crossing-bordercrossing-dark-rain.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-dark-rain.png
+- name: bordercrossing-bordercrossing-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-crafty-painting.jpg
+- name: lincoln-memorial-lincolnmemorial-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-ww2-dresden.jpg
+- name: stories-new-20-132-800-500-0-max-0-1--1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-20-132-800-500-0-max-0-1--1.jpg
+- name: old-door-lock-old-door-lock-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-pablo-blue.jpg
+- name: cargo-ship-cargo-ship-on-sea-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-dark-soul.jpg
+- name: white-house-lawn-white-house-lawn-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-oily-mcoilface.jpg
+- name: oldhousecars-house-old-cars-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-spagetti-accident.jpg
+- name: bordercrossing-bordercrossing-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-blue-granite.jpg
+- name: abe-lincoln-one-wols-file-00-00-07-91.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-wols-file-00-00-07-91.jpg
+- name: dragon-desert-desert-dragon-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-space-pizza.jpg
+- name: adam-smith-adam-smith-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-crafty-painting.jpg
+- name: docks-docks-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-neo-instinct.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-alien-goggles.jpg
+- name: border-crossing-bordercrossing-ww2-color.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-ww2-color.png
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-space-pizza.jpg
+- name: hollywood-building-hollywood-building-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-cinnamon-rolls.jpg
+- name: art-museum-art-museum-blue-circuit-4.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-blue-circuit-4.jpg
 ---
 Helping Those Who Care.&nbsp;Perfect Night For A Party.&nbsp;Legislation Introduced To Establish Memorial For Journalists Killed On The Job.&nbsp;Program Connects Leaders Who May Not Have Crossed Paths.&nbsp;Turkmen President Celebrates Birthday With New Gas Refinery.&nbsp;Trump Questioned About His 'meddling' Joke To Putin.&nbsp;Dutch Farm Floats Possibilities Of Urban Dairy Production.&nbsp;Growth Tops Concerns In Latest Treasure Valley Survey.&nbsp;
